Switched to process builder in the UCIEngine class. Now spaces and other characters should be handled across all platforms.